# UNH-CLT

./: .gitignore  LICENSE  README.md  go.mod  go.sum  makefile
Analysis/: Basic_Analysis.py
Plotting_Histograms/: plot_histogram.py
config/: api_type.go  bconfig.go  client_config.go  cluster_membership_config.go  config.go  health_monitor_config.go  master_config.go1  node_config.go1  osconsts_linux.go  osconsts_macos.go  osconsts_windows.go  overload_preventing_balancer_config.go  store_config.go
core/: core.go
csv_histogram/: csv_histogram.go
data/: Makefile  experiments.json  process_hist.py
data_processing/: experiment_definitions.go  histogram.go  window_aggregator.go
environments/: README.md  topology.gv
ids/: cmd_id.go  node_id.go
log/: log.go
master/: master.go  master_provider.go
master_node/: master.go
measurement/: measurement.go  measurement_test.go
messages/: messages.go
msg/: msg.go
netwrk/: communicator.go  httpserv.go  message.go  msgheader.go  transport_link.go
node/: node.go  node_provider.go  node_test.go
operation_dispatcher/: concurrent_operation_dispatcher.go  conflict_sequential_operation_dispatcher.go  contextless_operation_dispatcher.go  dispatcher_operation_container.go  operation_dispatcher.go  operation_dispatcher_test.go
request/: cql_request_msgs.go  kv_request_msgs.go  replication_request.go
store/: byte_string.go  command.go  kv_item.go  store.go
testing/: config.json  test_general_test.go  (+1 more)
tools/reordering-tester/: Cargo.toml  README.md
tools/reordering-tester/src/: args.rs  client.rs  server.rs
(+75 files in other folders)
