[package]
name = "reordering-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "reordering-tester-client"
path = "./src/client.rs"

[[bin]]
name = "reordering-tester-server"
path = "./src/server.rs"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive", "env", "wrap_help"] }
glommio = "0.8.0"
humantime = "2.1.0"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
thiserror = "1.0.38"
tracing = { version = "0.1.37", features = ["valuable"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "parking_lot", "serde", "serde_json", "time", "json", "tracing-serde", "valuable", "valuable-serde"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
